--- a/src/index.html
+++ b/src/index.html
@@ -209,35 +209,41 @@
                 </div>
                 <div class="animate_right md:w-1/2">
                     <h4 class="text-black dark:text-white font-medium uppercase">
-                        <a href="#" class="bg-meta text-white text-metatitle inline-flex rounded-full py-1 px-4.5 mr-4 mb-4">New</a> about
-                        us
+                         about us
                     </h4>
-                    <h2 class="relative font-bold text-black dark:text-white text-3xl xl:text-hero mb-6">
+                    <h2 class="relative font-bold  text-black dark:text-white text-3xl xl:text-hero mb-6">
                         Who We Are
                         <span class="inline-block relative before:absolute before:bottom-2.5 before:left-0 before:w-full before:h-3 before:bg-titlebg dark:before:bg-titlebgdark before:-z-1"></span>
                     </h2>
-                    <p>Welcome to FORT Remote, your trusted
-                        partner for remote business support
-                        services. </p>
+<!--                    <p>Welcome to FORT Remote, your trusted-->
+<!--                        partner for remote business support-->
+<!--                        services. </p>-->
 
                     <div class="mt-7.5 flex items-center gap-5">
-                        <div class="w-15 h-15 rounded-[50%] border border-stroke dark:border-strokedark dark:bg-blacksection flex items-center justify-center">
-                            <p class="text-black dark:text-white font-semibold text-metatitle2">01</p>
-                        </div>
+<!--                        <div class="w-15 h-15 rounded-[50%] border border-stroke dark:border-strokedark dark:bg-blacksection flex items-center justify-center">-->
+<!--                            <p class="text-black dark:text-white font-semibold text-metatitle2">01</p>-->
+<!--                        </div>-->
                         <div class="w-3/4">
-                            <h5 class="text-black dark:text-white text-metatitle2 mb-0.5">Expertise and Experience</h5>
-                            <p>Experienced, skilled professionals guarantee quality results in their specialized fields.</p>
+<!--                            <h5 class="text-black dark:text-white text-metatitle2 mb-0.5">Cost-Effective Solutions</h5>&ndash;&gt;-->
+                            <p>Welcome to FORT Remote, your trusted
+                                partner for remote business support
+                                services. With a strong commitment to
+                                excellence and a team of dedicated
+                                professionals, we have been helping
+                                businesses worldwide streamline their
+                                operations and enhance their efficiency
+                                since for over ten years.</p>
                         </div>
                     </div>
-                    <div class="mt-7.5 flex items-center gap-5">
-                        <div class="w-15 h-15 rounded-[50%] border border-stroke dark:border-strokedark dark:bg-blacksection flex items-center justify-center">
-                            <p class="text-black dark:text-white font-semibold text-metatitle2">02</p>
-                        </div>
-                        <div class="w-3/4">
-                            <h5 class="text-black dark:text-white text-metatitle2 mb-0.5">Cost-Effective Solutions</h5>
-                            <p>Outsource for cost savings, pay only for needed remote services.</p>
-                        </div>
-                    </div>
+<!--                    <div class="mt-7.5 flex items-center gap-5">-->
+<!--                        <div class="w-15 h-15 rounded-[50%] border border-stroke dark:border-strokedark dark:bg-blacksection flex items-center justify-center">-->
+<!--                            <p class="text-black dark:text-white font-semibold text-metatitle2">02</p>-->
+<!--                        </div>-->
+<!--                        <div class="w-3/4">-->
+<!--                            <h5 class="text-black dark:text-white text-metatitle2 mb-0.5">Cost-Effective Solutions</h5>-->
+<!--                            <p>Outsource for cost savings, pay only for needed remote services.</p>-->
+<!--                        </div>-->
+<!--                    </div>-->
                 </div>
             </div>
         </div>
@@ -441,7 +447,7 @@
             <!-- Section Title Start -->
             <div
                     class="animate_top text-center mx-auto "
-                    x-data="{ sectionTitle: `OUR TOOLS`, sectionSubtitle: `Our Tool Stack`, sectionTitlePara: `Experience the freedom to securely maintain and access your data remotely, at your convenience, from anywhere in the world. With our expert data management solutions, you're always in control, ensuring your business runs smoothly, no matter where you are. `}"
+                    x-data="{ sectionTitle: `OUR TOOLS`, sectionSubtitle: `Our Tool Stack`, sectionTitlePara: `Discover the tools Fort Remote Solutions relies on for success, including QuickBooks for financial precision, Excel for data-driven insights, Laravel for cutting-edge web development, MariaDB/MySQL for robust databases, ClickUp for efficient project management, and Vue for creating captivating user interfaces. Join us in harnessing the power of these essential tools for your business.`}"
             >
                 <include src="./partials/section-title.html"/>
             </div>
@@ -456,7 +462,7 @@
             <div class="flex flex-wrap gap-y-10 justify-around">
                 <div class="animate_top w-1/6">
                     <div class="inline-block rounded-[10px] shadow-solid-7 bg-white dark:bg-btndark p-4.5">
-                        <img src="./images/brand/brand-07.svg" alt="Brand"/>
+                        <img class="h-16" src="./images/brand/quickbooks-2.svg" alt="Brand"/>
                     </div>
                 </div>
 
@@ -464,7 +470,7 @@
 
                 <div class="animate_top w-1/6">
                     <div class="inline-block rounded-[10px] shadow-solid-7 bg-white dark:bg-btndark p-4.5">
-                        <img src="./images/brand/brand-08.svg" alt="Brand"/>
+                        <img class="h-16" src="./images/brand/vue-9.svg" alt="Brand"/>
                     </div>
                 </div>
 
@@ -474,7 +480,7 @@
 
                 <div class="animate_top w-1/6">
                     <div class="inline-block rounded-[10px] shadow-solid-7 bg-white dark:bg-btndark p-4.5">
-                        <img src="./images/brand/brand-09.svg" alt="Brand"/>
+                        <img class="h-16" src="./images/brand/mysql-logo.svg" alt="Brand"/>
                     </div>
                 </div>
 
@@ -486,7 +492,7 @@
 
                 <div class="animate_top w-1/6">
                     <div class="inline-block rounded-[10px] shadow-solid-7 bg-white dark:bg-btndark p-4.5">
-                        <img src="./images/brand/brand-10.svg" alt="Brand"/>
+                        <img class="h-16" src="./images/brand/laravel-2.svg" alt="Brand"/>
                     </div>
                 </div>
 
@@ -496,7 +502,7 @@
 
                 <div class="animate_top w-1/6">
                     <div class="inline-block rounded-[10px] shadow-solid-7 bg-white dark:bg-btndark p-4.5">
-                        <img src="./images/brand/brand-11.svg" alt="Brand"/>
+                        <img class="h-16" src="./images/brand/excel-4.svg" alt="Brand"/>
                     </div>
                 </div>
 
@@ -506,7 +512,7 @@
 
                 <div class="animate_top w-1/6">
                     <div class="inline-block rounded-[10px] shadow-solid-7 bg-white dark:bg-btndark p-4.5">
-                        <img src="./images/brand/brand-12.svg" alt="Brand"/>
+                        <img class="w-40" src="./images/brand/clickup.svg" alt="Brand"/>
                     </div>
                 </div>
             </div>
