added our story, misiion... changed nav items from 5 to 3

--- a/src/index.html
+++ b/src/index.html
@@ -200,7 +200,7 @@
     <!-- ===== Features End ===== -->
 
     <!-- ===== About Start ===== -->
-    <section class="pb-20 lg:pb-25 xl:pb-30 overflow-hidden">
+    <section id="about" class="pb-20 lg:pb-25 xl:pb-30 overflow-hidden">
         <div class="mx-auto max-w-c-1235 px-4 md:px-8 xl:px-0">
             <div class="flex items-center gap-8 lg:gap-32.5">
                 <div class="animate_left hidden md:block md:w-1/2">
@@ -250,7 +250,119 @@
     </section>
     <!-- ===== About End ===== -->
 
-    <!-- ===== About Two Start ===== -->
+    <!-- ===== Our Story Start ===== -->
+    <section class="pb-20 lg:pb-25 xl:pb-30 overflow-hidden">
+        <div class="mx-auto max-w-c-1235 px-4 md:px-8 xl:px-0">
+            <div class="flex items-center gap-8 lg:gap-32.5">
+                <div class="animate_right md:w-1/2">
+                    <h4 class="text-black dark:text-white font-medium uppercase">
+                        Our Journey
+                    </h4>
+                    <h2 class="relative font-bold  text-black dark:text-white text-3xl xl:text-hero mb-6">
+                        Our  <span class="inline-block relative before:absolute before:bottom-2.5 before:left-0 before:w-full before:h-3 before:bg-titlebg2 dark:before:bg-titlebgdark before:-z-1">Story</span>
+                        <span class="inline-block relative before:absolute before:bottom-2.5 before:left-0 before:w-full before:h-3 before:bg-titlebg dark:before:bg-titlebgdark before:-z-1"></span>
+                    </h2>
+                    <!--                    <p>Welcome to FORT Remote, your trusted-->
+                    <!--                        partner for remote business support-->
+                    <!--                        services. </p>-->
+
+                    <div class="mt-7.5 flex items-center gap-5">
+                        <!--                        <div class="w-15 h-15 rounded-[50%] border border-stroke dark:border-strokedark dark:bg-blacksection flex items-center justify-center">-->
+                        <!--                            <p class="text-black dark:text-white font-semibold text-metatitle2">01</p>-->
+                        <!--                        </div>-->
+                        <div class="w-3/4">
+                            <!--                            <h5 class="text-black dark:text-white text-metatitle2 mb-0.5">Cost-Effective Solutions</h5>&ndash;&gt;-->
+                            <p>FORT Remote was founded with a precise vision -
+                                to empower businesses of all sizes with reliable
+                                and cost-effective remote support services. We
+                                recognized that in an increasingly digital world,
+                                companies needed a dependable partner to
+                                handle critical tasks like bookkeeping, data entry,
+                                and customer care without the need for an
+                                in-house team.</p>
+                        </div>
+                    </div>
+                    <!--                    <div class="mt-7.5 flex items-center gap-5">-->
+                    <!--                        <div class="w-15 h-15 rounded-[50%] border border-stroke dark:border-strokedark dark:bg-blacksection flex items-center justify-center">-->
+                    <!--                            <p class="text-black dark:text-white font-semibold text-metatitle2">02</p>-->
+                    <!--                        </div>-->
+                    <!--                        <div class="w-3/4">-->
+                    <!--                            <h5 class="text-black dark:text-white text-metatitle2 mb-0.5">Cost-Effective Solutions</h5>-->
+                    <!--                            <p>Outsource for cost savings, pay only for needed remote services.</p>-->
+                    <!--                        </div>-->
+                    <!--                    </div>-->
+                </div>
+                <div class="animate_left hidden md:block md:w-1/2">
+                    <img src="./images/about/about-light-01.svg" alt="About" class="dark:hidden"/>
+                    <img src="./images/about/about-dark-01.svg" alt="About" class="hidden dark:block"/>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- ===== Our Story End ===== -->
+
+    <!-- ===== Mission Start ===== -->
+    <section class="pb-20 lg:pb-25 xl:pb-30 overflow-hidden">
+        <div class="mx-auto max-w-c-1235 px-4 md:px-8 xl:px-0">
+            <div class="flex items-center gap-8 lg:gap-32.5">
+                <div class="animate_left hidden md:block md:w-1/2">
+                    <img src="./images/about/about-light-01.svg" alt="About" class="dark:hidden"/>
+                    <img src="./images/about/about-dark-01.svg" alt="About" class="hidden dark:block"/>
+                </div>
+                <div class="animate_right md:w-1/2">
+                    <h4 class="text-black dark:text-white font-medium uppercase">
+                        Our Purpose
+                    </h4>
+                    <h2 class="relative font-bold  text-black dark:text-white text-3xl xl:text-hero mb-6">
+                        Our Mission
+                        <span class="inline-block relative before:absolute before:bottom-2.5 before:left-0 before:w-full before:h-3 before:bg-titlebg dark:before:bg-titlebgdark before:-z-1"></span>
+                    </h2>
+                    <!--                    <p>Welcome to FORT Remote, your trusted-->
+                    <!--                        partner for remote business support-->
+                    <!--                        services. </p>-->
+
+                    <div class="mt-7.5 flex items-center gap-5">
+                        <!--                        <div class="w-15 h-15 rounded-[50%] border border-stroke dark:border-strokedark dark:bg-blacksection flex items-center justify-center">-->
+                        <!--                            <p class="text-black dark:text-white font-semibold text-metatitle2">01</p>-->
+                        <!--                        </div>-->
+                        <div class="w-3/4">
+                            <!--                            <h5 class="text-black dark:text-white text-metatitle2 mb-0.5">Cost-Effective Solutions</h5>&ndash;&gt;-->
+                            <p>Our mission is simple yet profound: To
+                                enable businesses to thrive in the
+                                digital age by providing exceptional
+                                remote tools and expertise they need
+                                to excel in their respective industries.
+
+                                We believe that success is built on a
+                                foundation of efficiency, accuracy, and
+                                outstanding customer experiences.
+
+                                We are committed to delivering
+                                exceptional services that free our clients
+                                from administrative burdens and allow
+                                them to focus on growth and innovation.
+
+                                We are driven by this mission every day,
+                                and it guides everything we do.</p>
+                        </div>
+                    </div>
+                    <!--                    <div class="mt-7.5 flex items-center gap-5">-->
+                    <!--                        <div class="w-15 h-15 rounded-[50%] border border-stroke dark:border-strokedark dark:bg-blacksection flex items-center justify-center">-->
+                    <!--                            <p class="text-black dark:text-white font-semibold text-metatitle2">02</p>-->
+                    <!--                        </div>-->
+                    <!--                        <div class="w-3/4">-->
+                    <!--                            <h5 class="text-black dark:text-white text-metatitle2 mb-0.5">Cost-Effective Solutions</h5>-->
+                    <!--                            <p>Outsource for cost savings, pay only for needed remote services.</p>-->
+                    <!--                        </div>-->
+                    <!--                    </div>-->
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <!-- ===== Mission End ===== -->
+
+   <!--  ===== About Two Start =====
     <section>
         <div class="mx-auto max-w-c-1235 px-4 md:px-8 2xl:px-0 overflow-hidden">
             <div class="flex items-center gap-8 lg:gap-32.5">
@@ -276,7 +388,7 @@
             </div>
         </div>
     </section>
-    <!-- ===== About Two End ===== -->
+     ===== About Two End ===== -->
 
     <!-- ===== Features Tab Start ===== -->
     <section class="pt-18.5 pb-20 lg:pb-22.5 relative" x-data="{ featuresTab: 'tabOne' }">
